--- a/src/components/common/SocialShare.astro
+++ b/src/components/common/SocialShare.astro
@@ -15,31 +15,31 @@ const { text, url, class: className = 'inline-block' } = Astro.props;
   <button class="ml-2" title="Share to Twitter" data-aw-social-share="twitter" data-aw-url={url} data-aw-text={text}
     ><Icon
       name="ri:twitter-fill"
-      class="w-6 h-6 hover:text-black dark:hover:text-white transition duration-200 hover:scale-125 transform-gpu"
+      class="w-6 h-6 hover:text-slate dark:hover:text-white transition duration-200 hover:scale-125 transform-gpu"
     />
   </button>
   <button class="ml-2" title="Share to Facebook" data-aw-social-share="facebook" data-aw-url={url}
     ><Icon
       name="ri:facebook-box-fill"
-      class="w-6 h-6 hover:text-black dark:hover:text-white transition duration-200 hover:scale-125 transform-gpu"
+      class="w-6 h-6 hover:text-slate dark:hover:text-white transition duration-200 hover:scale-125 transform-gpu"
     />
   </button>
   <button class="ml-2" title="Share to LinkedIn" data-aw-social-share="linkedin" data-aw-url={url} data-aw-text={text}
     ><Icon
       name="ri:linkedin-box-fill"
-      class="w-6 h-6 hover:text-black dark:hover:text-white transition duration-200 hover:scale-125 transform-gpu"
+      class="w-6 h-6 hover:text-slate dark:hover:text-white transition duration-200 hover:scale-125 transform-gpu"
     />
   </button>
   <button class="ml-2" title="Share with WhatsApp" data-aw-social-share="whatsapp" data-aw-url={url} data-aw-text={text}
     ><Icon
       name="ri:whatsapp-fill"
-      class="w-6 h-6 hover:text-black dark:hover:text-white transition duration-200 hover:scale-125 transform-gpu"
+      class="w-6 h-6 hover:text-slate dark:hover:text-white transition duration-200 hover:scale-125 transform-gpu"
     />
   </button>
   <button class="ml-2" title="Share with Email" data-aw-social-share="mail" data-aw-url={url} data-aw-text={text}
     ><Icon
       name="ri:mail-fill"
-      class="w-6 h-6 hover:text-black dark:hover:text-white transition duration-200 hover:scale-125 transform-gpu"
+      class="w-6 h-6 hover:text-slate dark:hover:text-white transition duration-200 hover:scale-125 transform-gpu"
     />
   </button>
 </div>
