--- a/src/pages/chart.astro
+++ b/src/pages/chart.astro
@@ -12,27 +12,27 @@ const meta = {
 ---
 <Layout {meta}>
 
-  <div class="relative basis-1/2 w-full h-fit md:p-10 px-6 py-4 lg:rounded-[1.5rem] rounded-2xl bg-gray-200 dark:bg-rich-black shadow-2xl shadow-slate-600/20 border-gray-200 dark:border-slate-700 border-2">
+  <div class="relative basis-1/2 w-full h-fit md:p-10 px-6 py-4 lg:rounded-[1.5rem] rounded-2xl bg-gray-200 dark:bg-slate shadow-2xl shadow-slate-600/20 border-gray-200 dark:border-slate-700 border-2">
   <form name="contact" id="form" action="https://script.google.com/macros/s/AKfycbxueXZ-idc-kiZW_otSSjk5m3DSYWATDFFEs-GzZorH7qcqDBgMv0PSvKrLsloVdUY-/exec" class="space-y-8 transition duration-300 invisible">
     <div class="flex flex-wrap -mx-3">
       <div class="w-full md:w-1/2 px-3">
-        <label for="firstName" class="block mb-2 font-bold md:text-2xl text-xl text-rich-black dark:text-white">First Name</label>
-        <input type="text" name="firstName" id="firstName" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl border-gray-300 shadow-sm focus:outline-none focus:border-rich-black dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="First" required>
+        <label for="firstName" class="block mb-2 font-bold md:text-2xl text-xl text-slate dark:text-white">First Name</label>
+        <input type="text" name="firstName" id="firstName" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl border-gray-300 shadow-sm focus:outline-none focus:border-slate dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="First" required>
       </div>
       <div class="w-full md:w-1/2 px-3">
-        <label for="lastName" class="block mb-2 font-bold md:text-2xl text-xl text-rich-black dark:text-white">Last Name</label>
-        <input type="text" name="lastName" id="lastName" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl border-gray-300 shadow-sm focus:outline-none focus:border-rich-black dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="Last" required>
+        <label for="lastName" class="block mb-2 font-bold md:text-2xl text-xl text-slate dark:text-white">Last Name</label>
+        <input type="text" name="lastName" id="lastName" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl border-gray-300 shadow-sm focus:outline-none focus:border-slate dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="Last" required>
       </div>
     </div>
     <div>
-      <label for="email" class="block mb-2 font-bold md:text-2xl text-xl text-rich-black dark:text-white">Email</label>
-      <input type="email" name="email" id="email" class="shadow-sm bg-gray-50 border-gray-300 text-lg rounded-xl focus:outline-none focus:border-rich-black block w-full p-2.5 dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="name@domain.com" required>
+      <label for="email" class="block mb-2 font-bold md:text-2xl text-xl text-slate dark:text-white">Email</label>
+      <input type="email" name="email" id="email" class="shadow-sm bg-gray-50 border-gray-300 text-lg rounded-xl focus:outline-none focus:border-slate block w-full p-2.5 dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="name@domain.com" required>
     </div>
     <div class="sm:col-span-2">
-      <label for="message" class="block mb-2 font-bold md:text-2xl text-xl text-rich-black dark:text-white">Optional Message</label>
-      <textarea name="message" id="message" rows="4" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl shadow-sm border-gray-300 focus:outline-none focus:border-rich-black dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="Leave a comment..."></textarea>
+      <label for="message" class="block mb-2 font-bold md:text-2xl text-xl text-slate dark:text-white">Optional Message</label>
+      <textarea name="message" id="message" rows="4" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl shadow-sm border-gray-300 focus:outline-none focus:border-slate dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="Leave a comment..."></textarea>
     </div>
-    <button type="submit" class="py-3 px-8 text-2xl text-center rounded-xl bg-spring-green-500 sm:w-fit hover:bg-spring-green-800 focus:ring-4 focus:outline-none focus:ring-spring-green-300 dark:bg-spring-green-400 dark:hover:bg-spring-green-700 dark:focus:ring-spring-green-800 transition duration-200 text-white font-bold">Send</button>
+    <button type="submit" class="py-3 px-8 text-2xl text-center rounded-xl bg-primary-700 sm:w-fit hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 dark:bg-primary-400 dark:hover:bg-primary-700 dark:focus:ring-primary-800 transition duration-200 text-white font-bold">Send</button>
   </form>
   <div id="completion-msg" class="opacity-0 hidden absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2  transition duration-300">
     Thank you for completing this form!
