--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -28,7 +28,7 @@ const meta = {
   <Contact>
     <Fragment slot="title">
       Hey, let's<br />
-      <span class="text-spring-green-500 dark:text-spring-green-400">chat for a bit</span>
+      <span class="text-primary-700 dark:text-primary-500">chat for a bit</span>
     </Fragment>
     
   </Contact>
