--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const meta = {
   >
     <Fragment slot="title">
       Hi, I'm <br />
-      <span class="text-nugget-500 dark:text-nugget-400"> Jonathan Falcon</span>
+      <span class="text-primary-700 dark:text-primary-500"> Jonathan Falcon</span>
     </Fragment>
 
     
