--- a/src/components/blog/GridItemWork.astro
+++ b/src/components/blog/GridItemWork.astro
@@ -45,7 +45,7 @@ const image = await findImage(post.image);
       ) : (
         <a
           href={getPermalink(post.permalink, 'post')}
-          class="hover:text-spring-green-500 dark:hover:text-spring-green-400 transition duration-200"
+          class="hover:text-primary-700 dark:hover:text-primary-400 transition duration-200"
         >
           {post.title}
         </a>
