--- a/src/components/blog/HighlightedPosts.astro
+++ b/src/components/blog/HighlightedPosts.astro
@@ -37,7 +37,7 @@ const posts = await findPostsByIds(postIds);
       {
         allPostsText && allPostsLink && (
           <a
-            class="text-muted dark:text-slate-300 dark:hover:text-spring-green-400 hover:text-spring-green-500 transition duration-200 mb-6 lg:mb-0 text-xl"
+            class="text-gray-600 dark:text-slate-300 dark:hover:text-primary-400 hover:text-primary-700 transition duration-200 mb-6 lg:mb-0 text-xl"
             href={allPostsLink}
           >
             {allPostsText} »
