--- a/src/components/blog/LatestPosts.astro
+++ b/src/components/blog/LatestPosts.astro
@@ -37,7 +37,7 @@ const posts = await findLatestPosts({ count });
       {
         allPostsText && allPostsLink && (
           <a
-            class="text-muted dark:text-slate-300 dark:hover:text-spring-green-300 hover:text-spring-green-400 transition duration-200 mb-6 lg:mb-0 text-lg"
+            class="text-gray-600 dark:text-slate-300 dark:hover:text-primary-400 hover:text-primary-700 transition duration-200 mb-6 lg:mb-0 text-lg"
             href={allPostsLink}
           >
             {allPostsText} »
