--- a/src/components/blog/Tags.astro
+++ b/src/components/blog/Tags.astro
@@ -22,7 +22,7 @@ const { tags, class: className = 'text-base' } = Astro.props;
           ) : (
             <a
               href={getPermalink(tag, 'tag')}
-              class="text-muted dark:text-slate-300 hover:text-primary dark:hover:text-gray-100 rounded-md py-0.5 px-2 bg-gray-100 hover:bg-gray-200 transition duration-200 dark:hover:bg-slate-600 dark:bg-slate-700"
+              class="text-gray-600 dark:text-slate-300 hover:text-primary-700 dark:hover:text-gray-100 rounded-md py-0.5 px-2 bg-gray-100 hover:bg-gray-200 transition duration-200 dark:hover:bg-slate-600 dark:bg-slate-700"
             >
               {tag}
             </a>
