--- a/src/components/cv/Certificate.astro
+++ b/src/components/cv/Certificate.astro
@@ -12,7 +12,7 @@ const { name, issuer, link, year } = Astro.props;
 
 <div class="flex items-stretch">
   <div class="experience__data mb-5 mr-auto">
-    <h3 class="font-bold md:text-2.5xl text-1.5xl leading-none underline hover:text-spring-green-500 transition duration-200 mb-1 basis-4/5">
+    <h3 class="font-bold md:text-2.5xl text-1.5xl leading-none underline hover:text-primary-700 transition duration-200 mb-1 basis-4/5">
       <a href={link} target="_blank">{name}</a>
     </h3>
     <h4 class="md:text-1.5xl text-xl">{issuer}</h4>
