--- a/src/components/cv/TimelineWork.astro
+++ b/src/components/cv/TimelineWork.astro
@@ -4,8 +4,8 @@ const { title, subtitle, startYear, endYear, desc, tech=null, skills=null, last=
 
 <div class="flex items-stretch">
   <div class="education__time">
-    <span class="w-5 h-5 md:w-7 md:h-7 bg-nugget-500 dark:bg-nugget-400 block rounded-full mt-0.5 -mb-px"></span>
-    <span class={`education__line bg-nugget-500 dark:bg-nugget-400 block ${last ? "h-[96%]" : "h-[calc(100%+2px)]"} w-1 md:w-2 mx-auto`}></span>
+    <span class="w-5 h-5 md:w-7 md:h-7 bg-primary-700 dark:bg-primary-500 block rounded-full mt-0.5 -mb-px"></span>
+    <span class={`education__line bg-primary-700 dark:bg-primary-500 block ${last ? "h-[96%]" : "h-[calc(100%+2px)]"} w-1 md:w-2 mx-auto`}></span>
   </div>
   <div class="experience__data bd-grid ml-3 md:ml-5 w-full mb-5 mr-auto">
     <h3 class="font-bold md:text-2xl text-xl leading-none mb-1 basis-4/5 ">{title}</h3>
