--- a/src/components/widgets/Content.astro
+++ b/src/components/widgets/Content.astro
@@ -38,7 +38,7 @@ const {
         <div class="mb-10 md:mx-auto text-center md:mb-12 max-w-3xl">
           {highlight && (
             <p
-              class="text-base text-primary dark:text-blue-200 font-bold uppercase"
+              class="text-base text-primary-700 dark:text-blue-200 font-bold uppercase"
               set:html={highlight}
             />
           )}
@@ -50,7 +50,7 @@ const {
           )}
 
           {subtitle && (
-            <p class="max-w-3xl mx-auto sm:text-center text-xl text-muted dark:text-slate-400" set:html={subtitle} />
+            <p class="max-w-3xl mx-auto sm:text-center text-xl text-gray-600 dark:text-slate-400" set:html={subtitle} />
           )}
         </div>
       )
@@ -67,13 +67,13 @@ const {
               {items.map(({ title: title2, description, icon }) => (
                 <div class="flex">
                   <div class="flex-shrink-0">
-                    <div class="flex h-7 w-7 items-center justify-center rounded-full bg-primary text-gray-50">
+                    <div class="flex h-7 w-7 items-center justify-center rounded-full bg-primary-700 text-gray-50">
                       <Icon name={icon ? icon : 'ph:check-bold'} class="w-5 h-5" />
                     </div>
                   </div>
                   <div class="ml-4">
                     {title2 && <h3 class="text-lg leading-6 dark:text-white">{title2}</h3>}
-                    {description && <p class="mt-2 text-muted dark:text-slate-400" set:html={description} />}
+                    {description && <p class="mt-2 text-gray-600 dark:text-slate-400" set:html={description} />}
                   </div>
                 </div>
               ))}
