--- a/src/components/widgets/Features.astro
+++ b/src/components/widgets/Features.astro
@@ -22,14 +22,14 @@ const {
 } = Astro.props;
 ---
 
-<section class="scroll-mt-16 bg-gray-100 dark:bg-rich-black" id="features">
+<section class="md:scroll-m-[60px] scroll-m-[20px] bg-gray-100 dark:bg-slate-800" id="why-me">
   <div class="px-4 py-16 mx-auto max-w-6xl lg:px-8 lg:py-20">
     {
       (title || subtitle || highlight) && (
         <div class="mb-10 md:mx-auto text-center md:mb-12 max-w-3xl">
           {highlight && (
             <p
-              class="text-base text-primary dark:text-blue-200 font-bold uppercase"
+              class="text-base text-primary-700 dark:text-blue-200 font-bold uppercase"
               set:html={highlight}
             />
           )}
@@ -53,7 +53,7 @@ const {
             {subitems.map(({ title, description, icon }) => (
               <div class="flex flex-row">
                 <div class="mb-4 mr-4">
-                  <div class="flex items-center justify-center md:w-14 w-12 md:h-14 h-12 rounded-full bg-primary ">
+                  <div class="flex items-center justify-center md:w-14 w-12 md:h-14 h-12 rounded-full bg-primary-700 dark:bg-primary-600">
                     {icon && <Icon name={icon} class="md:w-7 w-6 md:h-7 w-6 text-white" />}
                   </div>
                 </div>
