--- a/src/components/widgets/Features2.astro
+++ b/src/components/widgets/Features2.astro
@@ -31,7 +31,7 @@ const {
           <div class="mb-8 md:mx-auto text-center max-w-3xl">
             {highlight && (
               <p
-                class="text-base text-primary dark:text-blue-200 font-bold uppercase"
+                class="text-base text-primary-700 dark:text-blue-200 font-bold uppercase"
                 set:html={highlight}
               />
             )}
@@ -44,7 +44,7 @@ const {
 
             {subtitle && (
               <p
-                class="max-w-3xl mx-auto sm:text-center text-xl text-muted dark:text-slate-400"
+                class="max-w-3xl mx-auto sm:text-center text-xl text-gray-600 dark:text-slate-400"
                 set:html={subtitle}
               />
             )}
@@ -59,7 +59,7 @@ const {
                 <Icon name={icon} class="w-10 h-10" />
                 <div class="ml-4 text-xl font-bold">{title}</div>
               </div>
-              {description && <p class="text-muted dark:text-gray-400 text-md mt-4" set:html={description} />}
+              {description && <p class="text-gray-600 dark:text-gray-400 text-md mt-4" set:html={description} />}
             </div>
           ))
         }
