--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -77,7 +77,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
             {socialLinks.map(({ ariaLabel, href, text, icon }) => (
               <li>
                 <a
-                  class="text-muted hover:text-spring-green-500 dark:hover:text-spring-green-400 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center duration-200 transition"
+                  class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center duration-200 transition"
                   aria-label={ariaLabel}
                   href={href}
                   target="_blank"
