--- a/src/components/widgets/Steps.astro
+++ b/src/components/widgets/Steps.astro
@@ -34,10 +34,10 @@ const {
                 <div>
                   {index !== items.length - 1 ? (
                     <div class="flex items-center justify-center w-10 h-10 rounded-full border-primary dark:border-blue-700 border-2">
-                      {icon && <Icon name={icon} class="w-6 h-6 text-primary dark:text-slate-200" />}
+                      {icon && <Icon name={icon} class="w-6 h-6 text-primary-700 dark:text-slate-200" />}
                     </div>
                   ) : (
-                    <div class="flex items-center justify-center w-10 h-10 rounded-full border-primary border-2 bg-primary dark:bg-blue-700 dark:border-blue-700">
+                    <div class="flex items-center justify-center w-10 h-10 rounded-full border-primary border-2 bg-primary-700 dark:bg-blue-700 dark:border-blue-700">
                       <Icon name={icon} class="w-6 h-6 text-white dark:text-slate-200" />
                     </div>
                   )}
@@ -46,7 +46,7 @@ const {
               </div>
               <div class={`pt-1 ${index !== items.length - 1 ? 'pb-8' : ''}`}>
                 {title && <p class="mb-2 text-xl font-bold dark:text-slate-300" set:html={title} />}
-                {description && <p class="text-muted dark:text-slate-400" set:html={description} />}
+                {description && <p class="text-gray-600 dark:text-slate-400" set:html={description} />}
               </div>
             </div>
           ))
