--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -18,7 +18,7 @@ const title = `Error 404`;
         
         <div class="lg:flex grid lg:gap-10 gap-6">
           <a rel="noopener noreferrer" href={getHomePermalink()} class="btn btn-primary md:text-xl text-lg font-normal">Back to Home<Icon name="ph:house-fill" class="w-6 h-6 ml-3"/></a>
-          <a rel="noopener noreferrer" href="https://unsplash.com/@jonathanfalcon" class="btn border-white text-white hover:bg-white hover:text-black dark:border-white md:text-xl text-lg">More Images<Icon name="simple-icons:unsplash" class="w-5 h-5 ml-4"/></a>
+          <a rel="noopener noreferrer" href="https://unsplash.com/@jonathanfalcon" class="btn border-white text-white hover:bg-white hover:text-slate dark:border-white md:text-xl text-lg">More Images<Icon name="simple-icons:unsplash" class="w-5 h-5 ml-4"/></a>
         </div>
       </div>
     </div>
