--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -25,8 +25,9 @@ const { language = 'en', textDirection = 'ltr' } = SITE;
     <MetaTags {...meta} />
   </head>
 
-  <body class="antialiased text-page bg-light dark:text-slate-50 dark:bg-dark">
-  
+  <body class="antialiased text-slate bg-white dark:text-slate-50 dark:bg-slate">
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NSF8HHP"
+                    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <slot />
     
     <style is:global>
