--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -127,7 +127,7 @@ let proseStyle = `${baseStyle} ${tableStyle} ${headingStyle} ${paragraphStyle} $
     </div>
     <div class="mx-auto px-6 sm:px-6 max-w-4xl mt-8 flex justify-between flex-col sm:flex-row">
       <PostTags tags={post.tags} class="mr-5" />
-      <SocialShare url={url} text={post.title} class="mt-5 sm:mt-1 align-middle text-gray-500 dark:text-slate-400" />
+      <SocialShare url={url} text={post.title} class="mt-5 sm:mt-1 flex flex-row gap-3 align-middle" />
     </div>
   </article>
 </section>
