--- a/src/components/common/BasicScripts.astro
+++ b/src/components/common/BasicScripts.astro
@@ -54,23 +54,30 @@ import { SITE } from '~/config.mjs';
       const network = elem.getAttribute('data-aw-social-share');
       const url = encodeURIComponent(elem.getAttribute('data-aw-url'));
       const text = encodeURIComponent(elem.getAttribute('data-aw-text'));
+      const utmLinks = {
+        facebook: encodeURIComponent('?utm_source=facebook&utm_medium=social'),
+        twitter: encodeURIComponent('?utm_source=twitter&utm_medium=social'),
+        linkedin: encodeURIComponent('?utm_source=linkedin&utm_medium=social'),
+        sms: encodeURIComponent('?utm_source=messages&utm_medium=shared'),
+        email: encodeURIComponent('?utm_source=email&utm_medium=shared')
+      };
 
       let href;
       switch (network) {
         case 'facebook':
-          href = `https://www.facebook.com/sharer.php?u=${url}`;
+          href = `https://www.facebook.com/sharer.php?u=${url+utmLinks['facebook']}`;
           break;
         case 'twitter':
-          href = `https://twitter.com/intent/tweet?url=${url}&text=${text}`;
+          href = `https://twitter.com/intent/tweet?url=${url+utmLinks['twitter']}&text=${text}`;
           break;
         case 'linkedin':
-          href = `https://www.linkedin.com/shareArticle?mini=true&url=${url}&title=${text}`;
+          href = `https://www.linkedin.com/shareArticle?mini=true&url=${url+utmLinks['linkedin']}&title=${text}`;
           break;
-        case 'whatsapp':
-          href = `https://wa.me/?text=${text}%20${url}`;
+        case 'sms':
+          href = `sms:&body=${url+utmLinks['sms']}`;
           break;
-        case 'mail':
-          href = `mailto:?subject=%22${text}%22&body=${text}%20${url}`;
+        case 'email':
+          href = `mailto:?subject=%22${text}%22&body=${text}%20${url+utmLinks['email']}`;
           break;
 
         default:
