Removed trailing slashes and updated index with more accurate canonical

--- a/src/components/common/StructuredData.astro
+++ b/src/components/common/StructuredData.astro
@@ -6,6 +6,6 @@
     "@context" : "https://schema.org",
     "@type" : "WebSite",
     "name" : "Jonathan Falcon",
-    "url" : "https://jonathanfalcon.com/"
+    "url" : "https://jonathanfalcon.com"
   }
 </script>
