--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,7 @@ const meta = {
   title: SITE.title,
   description: SITE.description,
   dontUseTitleTemplate: true,
+  canonical: 'https://jonathanfalcon.com',
 };
 ---
 
