Changed utm_source from messages to sms

--- a/src/components/common/BasicScripts.astro
+++ b/src/components/common/BasicScripts.astro
@@ -58,7 +58,7 @@ import { SITE } from '~/config.mjs';
         facebook: encodeURIComponent('?utm_source=facebook&utm_medium=social'),
         twitter: encodeURIComponent('?utm_source=twitter&utm_medium=social'),
         linkedin: encodeURIComponent('?utm_source=linkedin&utm_medium=social'),
-        sms: encodeURIComponent('?utm_source=messages&utm_medium=shared'),
+        sms: encodeURIComponent('?utm_source=sms&utm_medium=shared'),
         email: encodeURIComponent('?utm_source=email&utm_medium=shared')
       };
 
