--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -19,13 +19,14 @@ const { post, url } = Astro.props;
 
 //Prose styles
 let baseStyleFix = 'max-md:prose-p:text-[1.075rem] max-md:prose-li:text-[1.075rem]';
-let baseStyle = `'mt-8 mx-auto px-4 sm:px-6 max-w-4xl prose lg:prose-xl md:prose-lg dark:prose-invert ${baseStyleFix}'`;
+let baseStyle = 'prose md:prose-xl dark:prose-invert max-w-4xl mx-auto px-4';
 
 let baseTableStyle = 'prose-table:min-w-[30rem] prose-table:table-auto md:prose-table:text-lg prose-table:text-base prose-table:my-0';
-let tableHeadStyle = 'prose-thead:bg-primary-700 prose-th:text-white prose-thead:border-none';
-let tableRowStyle = 'even:prose-tr:bg-gray-200 dark:even:prose-tr:bg-slate-700';
-let tableDataStyle = 'prose-td:px-4 prose-th:px-4 prose-td:align-middle prose-th:align-middle prose-th:py-3 prose-td:py-3';
-let tableStyle = `${baseTableStyle} ${tableHeadStyle} ${tableRowStyle} ${tableDataStyle}`;
+let tableHeadStyle = 'prose-thead:bg-primary-700 dark:prose-thead:bg-primary-600 prose-th:text-white';
+let tableRowStyle = 'even:prose-tr:bg-gray-200 dark:even:prose-tr:bg-slate-700 prose-tr:border-gray-300 dark:prose-tr:border-slate-600 last:prose-tr:border-primary-700 dark:last:prose-tr:border-primary-600';
+let tableDataStyle = 'prose-td:px-4 prose-th:px-4 prose-th:py-3 prose-td:py-3';
+let tableStyle = `${tableHeadStyle} ${tableRowStyle} ${tableDataStyle} prose-table:rounded-xl`;
+
 
 let baseHeadingStyle = 'prose-headings:font-bold prose-headings:!mb-2.5';
 let h2Style = 'md:prose-h2:!text-4.5xl prose-h2:!text-3xl prose-h2:uppercase prose-h2:tracking-wide';
@@ -45,9 +46,9 @@ let imageStyle = 'prose-img:rounded-2xl prose-img:shadow-lg';
 
 let preStyle = '#prose-pre:!bg-gray-100';
 
-let codeStyle = 'prose-code:before:hidden prose-code:after:hidden ';
+let proseStyle = `${baseStyle} ${tableStyle} ${linkStyle}`;
 
-let proseStyle = `${baseStyle} ${tableStyle} ${headingStyle} ${paragraphStyle} ${textColor} ${linkStyle} ${imageStyle} ${preStyle} ${codeStyle}`;
+//proseStyle = `max-w-4xl mx-auto px-4 prose md:prose-xl dark:prose-invert`;
 ---
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css"
       integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
@@ -58,7 +59,7 @@ let proseStyle = `${baseStyle} ${tableStyle} ${headingStyle} ${paragraphStyle} $
 <section class="py-8 sm:py-16 lg:py-20 mx-auto">
   <article>
     <header class={post.image ? '' : ''}>
-      <div class="flex justify-between flex-col sm:flex-row max-w-4xl mx-auto mt-0 mb-2 px-4 sm:px-6 sm:items-center">
+      <div class="flex justify-between flex-col sm:flex-row max-w-4xl mx-auto mt-0 mb-2 px-4 sm:items-center">
         <p class="text-gray-700 dark:text-gray-300">
           <Icon name="mdi:calendar-month" class="w-4 h-4 inline-block -mt-0.5" />
           <time datetime={String(post.publishDate)}>{getFormattedDate(post.publishDate)}</time>
@@ -77,12 +78,12 @@ let proseStyle = `${baseStyle} ${tableStyle} ${headingStyle} ${paragraphStyle} $
         </p>
       </div>
       <h1
-        class="px-4 sm:px-6 max-w-4xl mx-auto text-4xl md:text-6xl font-bold font-serif"
+        class="px-4 max-w-4xl mx-auto text-4xl md:text-6xl font-bold font-serif"
       >
         {post.title}
       </h1>
       <p
-        class="max-w-4xl mx-auto mt-4 mb-8 px-4 sm:px-6 text-xl leading-snug md:text-2xl text-gray-800 dark:text-slate-300"
+        class="max-w-4xl mx-auto mt-4 mb-8 px-4 text-xl leading-snug md:text-2xl text-gray-800 dark:text-slate-300"
       >
         {post.description}
       </p>
@@ -91,7 +92,7 @@ let proseStyle = `${baseStyle} ${tableStyle} ${headingStyle} ${paragraphStyle} $
         post.image ? (
           <Picture
             src={post.image}
-            class="max-w-full lg:max-w-6xl mx-auto md:mb-14 mb-6 min-[910px]:rounded-3xl bg-gray-400 dark:bg-slate-700"
+            class="max-w-full lg:max-w-4xl mx-auto md:mb-14 mb-6 min-[900px]:rounded-3xl bg-gray-400 dark:bg-slate-700"
             widths={[400, 900, 1400, 2000, 3000]}
             sizes="(max-width: 900px) 400px, (max-width: 1400px) 900px, (max-width: 2000px) 1400px, (max-width: 3000px) 2000px, 3000px"
             alt={post.title}
