--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -26,7 +26,7 @@ const meta = {
     
     
   <div class="mb-4">
-    <h2 class="md:text-4xl text-3xl uppercase tracking-wider w-full font-bold flex flex-row items-center">About Me <Icon name="ph:user-fill" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
+    <h2 class="md:text-4xl text-3xl uppercase w-full font-bold flex flex-row items-center">About Me <Icon name="ph:user-fill" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
   </div>
 
   <div class="md:mb-20 mb-14">
@@ -34,7 +34,7 @@ const meta = {
   </div>
 
   <div class="mb-4">
-    <h2 class="md:text-4xl text-3xl uppercase tracking-wider w-full font-bold flex flex-row items-center">Education <Icon name="fluent:hat-graduation-12-filled" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
+    <h2 class="md:text-4xl text-3xl uppercase w-full font-bold flex flex-row items-center">Education <Icon name="fluent:hat-graduation-12-filled" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
   </div>
 
   <div class="grid gap-y-4 md:mb-28 mb-20">
@@ -60,7 +60,7 @@ const meta = {
 
 <!--
    <div class="mb-4">
-     <h2 class="md:text-4xl text-3xl uppercase tracking-wider w-full font-bold flex flex-row items-center">Experience <Icon name="bi:briefcase-fill" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
+     <h2 class="md:text-4xl text-3xl uppercase w-full font-bold flex flex-row items-center">Experience <Icon name="bi:briefcase-fill" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
    </div>
  
   
@@ -79,7 +79,7 @@ const meta = {
 -->
 
   <div class="mb-4">
-    <h2 class="md:text-4xl text-3xl uppercase tracking-wider w-full font-bold flex flex-row items-center">Certifications <Icon name="ph:medal-fill" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
+    <h2 class="md:text-4xl text-3xl uppercase w-full font-bold flex flex-row items-center">Certifications <Icon name="ph:medal-fill" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
   </div>
 
   <div class="md:mb-20 mb-14 grid gap-y-6">
@@ -104,7 +104,7 @@ const meta = {
   </div>
 
   <div class="mb-4">
-    <h2 class="md:text-4xl text-3xl uppercase tracking-wider w-full font-bold flex flex-row items-center">Coding Languages <Icon name="ph:file-code-fill" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
+    <h2 class="md:text-4xl text-3xl uppercase w-full font-bold flex flex-row items-center">Coding Languages <Icon name="ph:file-code-fill" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
   </div>
 
     <div class="md:mb-20 mb-14 grid gap-y-4">
@@ -154,7 +154,7 @@ const meta = {
     </div>
 
     <div class="mb-4">
-      <h2 class="md:text-4xl text-3xl uppercase tracking-wider w-full font-bold flex flex-row items-center">Software <Icon name="mdi:desktop-mac-dashboard" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
+      <h2 class="md:text-4xl text-3xl uppercase w-full font-bold flex flex-row items-center">Software <Icon name="mdi:desktop-mac-dashboard" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
     </div>
 
     <div class="md:mb-20 mb-14 grid gap-y-4">
@@ -196,7 +196,7 @@ const meta = {
     </div>
 
     <div class="mb-4">
-      <h2 class="md:text-4xl text-3xl uppercase tracking-wider w-full font-bold flex flex-row items-center">
+      <h2 class="md:text-4xl text-3xl uppercase w-full font-bold flex flex-row items-center">
         Hobbies <Icon name="mdi:house" class="md:w-9 md:h-9 w-[1.875rem] h-[1.875rem] ml-5" /></h2>
     </div>
 
