--- a/src/components/cv/Certificate.astro
+++ b/src/components/cv/Certificate.astro
@@ -11,8 +11,8 @@ const { name, issuer, link, year } = Astro.props;
 </div> -->
 
 <div class="flex items-stretch">
-  <div class="experience__data mb-5 mr-auto">
-    <h3 class="font-bold md:text-2.5xl text-1.5xl leading-none underline hover:text-primary-700 transition duration-200 mb-1 basis-4/5">
+  <div class="experience__data mb-15 mr-auto">
+    <h3 class="font-bold md:text-2.5xl text-1.5xl leading-none underline md:decoration-[3px] decoration-2 underline-position-under hover:text-primary-600 dark:hover:text-primary-400 transition duration-200 mb-3 basis-4/5">
       <a href={link} target="_blank">{name}</a>
     </h3>
     <h4 class="md:text-1.5xl text-xl">{issuer}</h4>
