Moved default styles for table to tailwind.config.js and reduced text decoration thickness for links

--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -25,7 +25,7 @@ let baseTableStyle = 'prose-table:min-w-[30rem] prose-table:table-auto md:prose-
 let tableHeadStyle = 'prose-thead:bg-primary-700 dark:prose-thead:bg-primary-600 prose-th:text-white';
 let tableRowStyle = 'even:prose-tr:bg-gray-200 dark:even:prose-tr:bg-slate-700 prose-tr:border-gray-300 dark:prose-tr:border-slate-600 last:prose-tr:border-primary-700 dark:last:prose-tr:border-primary-600';
 let tableDataStyle = 'prose-td:px-4 prose-th:px-4 prose-th:py-3 prose-td:py-3';
-let tableStyle = `${tableHeadStyle} ${tableRowStyle} ${tableDataStyle} prose-table:rounded-xl`;
+let tableStyle = `${tableHeadStyle} ${tableRowStyle} prose-table:rounded-xl`;
 
 
 let baseHeadingStyle = 'prose-headings:font-bold prose-headings:!mb-2.5';
