Made font weight explicit rather than relying on font

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -2,5 +2,5 @@
 import {Icon} from "astro-icon";
 ---
 
-<span class="flex items-center self-center ml-2 xs:text-2xl text-xl font-serif whitespace-nowrap dark:text-white">
+<span class="flex items-center self-center ml-2 xs:text-2xl text-xl font-serif font-black whitespace-nowrap dark:text-white">
   <Icon name="simple-icons:falcon" class="h-7 w-7 mr-2"/>Jonathan Falcon</span>
