Updated font weight of navigation items

--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -61,7 +61,7 @@ const {
       class="items-center w-full md:w-auto opacity-0 md:opacity-100 h-0 transition-all duration-500 md:flex dark:text-slate-200 md:h-auto overflow-y-auto md:overflow-visible md:mx-5"
       aria-label="Main navigation"
     >
-      <ul class="flex flex-col md:flex-row md:self-center w-full md:w-auto md:text-1.5xl text-6xl md:mt-0 mt-2 font-bold">
+      <ul class="flex flex-col md:flex-row md:self-center w-full md:w-auto md:text-1.5xl text-6xl md:mt-0 mt-2 md:font-semibold font-bold">
         {
           links.map(({ text, href, links }) => (
             <li class={links?.length ? 'dropdown' : 'not-dropdown'}>
