Updated padding, margins, and heights for updated navbar

--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -59,7 +59,7 @@ let proseStyle = `${baseStyle} ${tableStyle} ${linkStyle} ${imageStyle}`;
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@500;700&display=swap" rel="stylesheet">
 
-<section class="py-8 sm:py-16 lg:py-20 mx-auto">
+<section class="!py-20 md:!py-24 mx-auto">
   <article>
     <header class={post.image ? '' : ''}>
       <div class="flex justify-between flex-col sm:flex-row max-w-4xl mx-auto mt-0 mb-2 px-4 sm:items-center">
