--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -19,7 +19,7 @@ const { meta } = Astro.props;
   <slot name="header">
     <Header {...headerData} position="right" showToggleTheme />
   </slot>
-  <main class="mt-[60px]">
+  <main>
     <slot />
   </main>
   <slot name="footer">
