Reverted image styling back to original

--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -42,7 +42,7 @@ let textColor = 'text-inherit dark:text-inherit prose-li:marker:text-inherit dar
 
 let linkStyle = 'prose-a:duration-200 prose-a:transition prose-a:text-blue-600 hover:prose-a:text-blue-900 dark:hover:prose-a:text-blue-500 dark:prose-a:text-blue-300 prose-a:underline-offset-2';
 
-let imageStyle = 'lg:prose-img:rounded-2xl lg:prose-img:shadow-lg max-lg:prose-img:-mx-4';
+let imageStyle = 'prose-img:rounded-2xl prose-img:shadow-lg';
 
 // Try later
 //let imageStyle = 'lg:prose-img:rounded-2xl lg:prose-img:shadow-lg max-lg:prose-img:-mx-4';
