--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -33,28 +33,36 @@ const {
         {
           title && (
             <h1
-              class=" mx-auto lg:text-7xl md:text-6xl text-5xl font-bold lg:mb-16 md:mb-12 mb-6 font-serif dark:text-gray-200"
+              class="mx-auto lg:text-7xl md:text-6xl text-5xl font-bold lg:mb-16 md:mb-12 mb-6 font-serif dark:text-gray-200"
               set:html={title}
             />
           )
         }
-        <ul class="flex justify-center lg:gap-20 md:gap-12 gap-8 md:mb-12 mb-6">
+        <ul class="lg:grid-cols-2 lg:grid place-items-center gap-14 flex justify-center md:mb-12 mb-6">
           <li>
-            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 inline-flex items-center duration-200 transition" aria-label="LinkedIn" href="https://www.linkedin.com/in/jqfalcon/">
+            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 inline-flex items-center duration-200 transition" aria-label="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jqfalcon/">
               <Icon class="lg:w-20 lg:h-20 md:w-16 md:h-16 w-12 h-12" name="simple-icons:linkedin"/>
 
             </a>
-          </li><li>
-          <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 inline-flex items-center duration-200 transition" aria-label="GitHub" href="https://github.com/jonathanfalcon">
-            <Icon class="lg:w-20 lg:h-20 md:w-16 md:h-16 w-12 h-12" name="simple-icons:github"/>
+          </li>
+          <li>
+            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 inline-flex items-center duration-200 transition" aria-label="GitHub" title="GitHub" href="https://github.com/jonathanfalcon">
+              <Icon class="lg:w-20 lg:h-20 md:w-16 md:h-16 w-12 h-12" name="simple-icons:github"/>
+  
+            </a>
+          </li>
+          <li>
+            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 inline-flex items-center duration-200 transition" aria-label="Tableau Public" title="Tableau Public" href="https://public.tableau.com/app/profile/falcon">
+              <Icon class="lg:w-20 lg:h-20 md:w-16 md:h-16 w-12 h-12" name="simple-icons:tableau"/>
 
-          </a>
-        </li><li>
-          <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 inline-flex items-center duration-200 transition" aria-label="Unsplash" href="https://unsplash.com/@jonathanfalcon">
-            <Icon class="lg:w-20 lg:h-20 md:w-16 md:h-16 w-12 h-12" name="simple-icons:unsplash"/>
-
-          </a>
-        </li>
+            </a>
+          </li>
+          <li>
+            <a class="text-gray-600 hover:text-primary-700 dark:hover:text-primary-400 dark:text-gray-300 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 inline-flex items-center duration-200 transition" aria-label="Unsplash" title="Unsplash" href="https://unsplash.com/@jonathanfalcon">
+              <Icon class="lg:w-20 lg:h-20 md:w-16 md:h-16 w-12 h-12" name="simple-icons:unsplash"/>
+  
+            </a>
+          </li>
         </ul>
         <div class="mx-auto lg:max-w-none">
           {subtitle && <p class="text-xl md:text-2xl text-gray-600 mb-6 dark:text-slate-300" set:html={subtitle} />}
