Updated HighlightedPosts.astro to accept background color

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,6 @@ const meta = {
     ]}
   />
 
-  <div class="bg-white dark:bg-slate-900">
   <HighlightedPosts
     title="Check out some of my work"
     postIds={[
@@ -78,8 +77,8 @@ const meta = {
       'projects/cleaning-the-iowa-liquor-sales-dataset.mdx',
     ]}
     allPostsText="View more"
+    background = "bg-white dark:bg-slate"
   />
-    </div>
   
   
 </Layout>
