--- a/src/components/blog/HighlightedPosts.astro
+++ b/src/components/blog/HighlightedPosts.astro
@@ -18,12 +18,14 @@ const {
   allPostsLink = getBlogPermalink(),
   information = await Astro.slots.render('information'),
   postIds = [],
+  background,
 } = Astro.props;
 
 const posts = await findPostsByIds(postIds);
 ---
 
-<section class="px-4 py-16 mx-auto max-w-7xl lg:py-20">
+<section class=`py-16 lg:py-20 ${background}`>
+  <div class="px-4 mx-auto max-w-7xl">
   <div class="flex flex-col lg:justify-between lg:flex-row mb-8">
     <div class="md:max-w-3xl">
       {
@@ -50,4 +52,5 @@ const posts = await findPostsByIds(postIds);
   </div>
 
   <Grid posts={posts} />
+  </div>
 </section>
