--- a/src/components/widgets/Features2.astro
+++ b/src/components/widgets/Features2.astro
@@ -22,29 +22,28 @@ const {
 } = Astro.props;
 ---
 
-<section class="relative">
-  <div class="absolute inset-0 bg-blue-50 dark:bg-slate-800 pointer-events-none mb-32" aria-hidden="true"></div>
-  <div class="relative max-w-7xl mx-auto px-4 sm:px-6 -mb-12">
+<section class="bg-gray-200 dark:bg-slate-750">
+  <div class="max-w-7xl mx-auto px-4">
     <div class="py-4 pt-8 sm:py-6 lg:py-8 lg:pt-12">
       {
         (title || subtitle || highlight) && (
           <div class="mb-8 md:mx-auto text-center max-w-3xl">
             {highlight && (
               <p
-                class="text-base text-primary-700 dark:text-blue-200 font-bold uppercase"
+                class="text-primary-700 dark:text-primary-400 font-semibold tracking-wide text-lg uppercase"
                 set:html={highlight}
               />
             )}
             {title && (
               <h2
-                class="text-4xl md:text-5xl font-bold mb-4 font-serif"
+                class="text-4xl md:text-6xl font-black mb-4 font-serif"
                 set:html={title}
               />
             )}
 
             {subtitle && (
               <p
-                class="max-w-3xl mx-auto sm:text-center text-xl text-gray-600 dark:text-slate-400"
+                class="max-w-3xl mx-auto sm:text-center md:text-2xl text-xl text-gray-800 dark:text-slate-200"
                 set:html={subtitle}
               />
             )}
