Updated Features.astro to accept background color

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,10 +36,11 @@ const meta = {
 
     
   </Hero3>
-  
+
   <Features
     title="Why me?"
     subtitle="You need someone who's flexible enough to run the analyses and also effectively communicate the results."
+    background="bg-gray-100 dark:bg-slate-800"
     items={[
       [
         {
