--- a/src/components/widgets/Features.astro
+++ b/src/components/widgets/Features.astro
@@ -19,11 +19,12 @@ const {
   subtitle = await Astro.slots.render('subtitle'),
   highlight,
   items = [],
+  background,
 } = Astro.props;
 ---
 
-<section class="md:scroll-m-[60px] scroll-m-[20px] bg-gray-100 dark:bg-slate-800" id="why-me">
-  <div class="px-4 py-16 mx-auto max-w-6xl lg:px-8 lg:py-20">
+<section class=`md:scroll-m-[60px] scroll-m-[20px] ${background}` id="why-me">
+  <div class="px-4 py-16 mx-auto max-w-6xl lg:py-20">
     {
       (title || subtitle || highlight) && (
         <div class="mb-10 md:mx-auto text-center md:mb-12 max-w-3xl">
